feat:(typeorm + pg + tsyringe) Update in repositories configuration
